welcome.lessons.welcome.variables.Variables.scala.code
nbpas: Int=1;
for nbpas from 1 to 6 do{
	avance(nbpas);
	prendBiscuit;
	recule(nbpas);
	poseBiscuit();
	nbpas:=nbpas+1;
}